Scrolling now works but nothing else does

--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
              onclick="TSOS.Control.hostBtnReset_click(this);">
    </div>
 
-   <div id="divConsole" style="margin:4px; width:500px; height:500px; float:left;">
+   <div id="divConsole" style="margin:4px; width:500px; height:500px; float:left; overflow: scroll;">
       <canvas id="display"
-              width="500px"
+              width="496px"
               height="500px"
               tabindex="3">
       </canvas>
