--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
              onclick="TSOS.Control.hostBtnReset_click(this);">
    </div>
 
-   <div id="divConsole" style="margin:4px; width:500px; height:500px; float:left; overflow: scroll;">
+   <div id="divConsole" style="margin:4px; width:500px; height:500px; float:left;">
       <canvas id="display"
               width="496px"
               height="500px"
