Added permanenet dark mode on version 0.3

--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
          <canvas id="display"
                  width="900px"
                  height="650px"
-                 tabindex="3">
+                 tabindex="3"
+                 style="border-radius: 15px;">
          </canvas>
       </div>
       <div style="padding-left: 400px">
@@ -88,7 +89,7 @@
                <br>
                <textarea name="taHostLog"
                          id  ="taHostLog"
-                         rows="33"
+                         rows="30"
                          cols="68"
                ></textarea>
             </label>
@@ -109,6 +110,8 @@
    </div>
 </div>
 
+<br>
+
 <div>
    <input type="text"
           id = "status"
@@ -116,7 +119,7 @@
           readonly>
 </div>
 
-<p class="footerText" style="clear:both;">
+<p class="footerText" style="clear:both; color: white; font-family: 'Comic Sans MS'">
    <br>
    Copyright &copy; 2022 - 2022 All Rights Reserved. This is the intellectual property of May-Whool.
    <br>
