System call 2 works now

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
    <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
    <meta name="author"             content="Alan G. Labouseur" />
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+   <script src="https://kit.fontawesome.com/b05fe92938.js" crossorigin="anonymous"></script>
    <link rel="stylesheet" href="tsos.css" type="text/css" media="screen" />
    <title>
       TSOS - a browser-based virtual Operating System in TypeScript
@@ -15,6 +18,8 @@
    <script type="text/javascript" src="distrib/host/control.js"></script>
    <script type="text/javascript" src="distrib/host/devices.js"></script>
    <script type="text/javascript" src="distrib/host/cpu.js"></script>
+   <script type="text/javascript" src="distrib/host/memory.js"></script>
+   <script type="text/javascript" src="distrib/host/memoryAccessor.js"></script>
 
    <!-- Virtual OS Routines: Make sure Kernel code is last, since it needs those above it. -->
    <script type="text/javascript" src="distrib/os/interrupt.js"></script>
@@ -27,6 +32,8 @@
    <script type="text/javascript" src="distrib/os/shellCommand.js"></script>
    <script type="text/javascript" src="distrib/os/userCommand.js"></script>
    <script type="text/javascript" src="distrib/os/kernel.js"></script>
+   <script type="text/javascript" src="distrib/os/memoryManager.js"></script>
+   <script type="text/javascript" src="distrib/os/pcb.js"></script>
 
    <!-- Other Routines -->
    <script type="text/javascript" src="distrib/utils.js"></script>
@@ -39,40 +46,44 @@
 
 <div id="divMain" style="width:100%;">
 
-   <div id="divButtonBar" style="margin:4px;">
-      <input type="button"
-             id = "btnStartOS"
-             name="brnStartOS"
-             class="normal_button"
-             value="Start"
-             tabindex="0"
-             onclick="TSOS.Control.hostBtnStartOS_click(this);">
-
-      <input type="button"
+   <nav class="navbar navbar-dark bg-dark">
+      <button class="btn btn-outline-success"
+              id="btnStartOS"
+              name="brnStartOS"
+              value="Start"
+              tabindex="0"
+              onclick="TSOS.Control.hostBtnStartOS_click(this);"
+      >
+         <i class="fa-regular fa-play"></i>
+      </button>
+      <button
              id = "btnHaltOS"
              name="brnHaltOS"
-             class="normal_button"
+             class="btn btn-outline-warning"
              disabled="disabled"
              value="Halt"
              tabindex="1"
              onclick="TSOS.Control.hostBtnHaltOS_click(this);">
+         <i class="fa-regular fa-pause"></i>
+      </button>
 
-      <input type="button"
+      <button type="button"
              id = "btnReset"
              name="brnReset"
-             class="normal_button"
+             class="btn btn-outline-danger"
              disabled="disabled"
              value="Restart"
              tabindex="2"
              onclick="TSOS.Control.hostBtnReset_click(this);">
-
+         <i class="fa-regular fa-rotate-right"></i>
+      </button>
       <h1>zerOS</h1>
-
       <input type="text"
              id = "currentDateAndTime"
+             style = "height: 40px;"
              readonly>
+   </nav>
 
-   </div>
    <div>
       <div id="divConsole" style="margin:4px; width: 900px; height:650px; float:left;">
          <canvas id="display"
@@ -83,26 +94,63 @@
          </canvas>
       </div>
       <div style="padding-left: 400px">
-         <div id="divLog" style="margin-left:520px;">
-            <label>
-               Host Log
-               <br>
-               <textarea name="taHostLog"
-                         id  ="taHostLog"
-                         rows="30"
-                         cols="68"
-               ></textarea>
-            </label>
+         <div style="margin-left:520px;">
+            <table class="table table-dark" style="border-radius: 5px;">
+               <thead class="thead-dark">
+               <tr>
+                  <th scope="col">PC</th>
+                  <th scope="col">IR</th>
+                  <th scope="col">ACC</th>
+                  <th scope="col">XReg</th>
+                  <th scope="col">YReg</th>
+                  <th scope="col">ZFlag</th>
+               </tr>
+               </thead>
+               <tbody>
+               <tr id="cpuViewRow">
+                  <td>0</td>
+                  <td>0</td>
+                  <td>0</td>
+                  <td>0</td>
+                  <td>0</td>
+                  <td>0</td>
+               </tr>
+               </tbody>
+            </table>
          </div>
-
+         <div style="margin-left:520px;overflow-y:scroll; max-height:200px;">
+            <table class="table table-dark" style="border-radius: 5px;">
+               <thead class="thead-dark">
+               <tr>
+                  <th>Memory View</th>
+               </tr>
+               </thead>
+               <tbody id="memoryViewBody">
+               </tbody>
+            </table>
+         </div>
          <div id="divUserProgramInput" style="margin-left:520px;">
             <label>
                User Program Input
                <br>
                <textarea name="taProgramInput"
                          id  ="taProgramInput"
-                         rows="13"
-                         cols="68"
+                         rows="10"
+                         cols="70"
+                         class="bg-dark text-white"
+               ></textarea>
+            </label>
+         </div>
+         <div id="divLog" style="margin-left:520px;">
+            <label>
+               Host Log
+               <br>
+               <textarea name="taHostLog"
+                         id  ="taHostLog"
+                         rows="10"
+                         cols="70"
+                         class="bg-dark text-white"
+                         readonly
                ></textarea>
             </label>
          </div>
@@ -111,13 +159,14 @@
 </div>
 
 <br>
-
 <div>
    <input type="text"
           id = "status"
           value="STATUS:"
+          style = "height: 30px;"
           readonly>
 </div>
+<br>
 
 <p class="footerText" style="clear:both; color: white; font-family: 'Comic Sans MS'">
    <br>
