I'm making chnages, lost track of what but some things dont break anymore

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
    <script src="https://kit.fontawesome.com/b05fe92938.js" crossorigin="anonymous"></script>
    <link rel="stylesheet" href="tsos.css" type="text/css" media="screen" />
    <title>
-      TSOS - a browser-based virtual Operating System in TypeScript
+      zerOS
    </title>
+   <link rel="icon" type="image/x-icon" href="source/os/images/zeroFavicon.png"/>
 
    <!-- Globals CONSTANTS and _Variables. Must included be first. -->
    <script type="text/javascript" src="distrib/globals.js"></script>
@@ -168,6 +169,7 @@
                   <th scope="col">X</th>
                   <th scope="col">Y</th>
                   <th scope="col">Z</th>
+                  <th scope=""col>Status</th>
                </tr>
                </thead>
                <tbody id="processViewBody">
