--- a/index.html
+++ b/index.html
@@ -35,12 +35,14 @@
    <script type="text/javascript" src="distrib/os/kernel.js"></script>
    <script type="text/javascript" src="distrib/os/memoryManager.js"></script>
    <script type="text/javascript" src="distrib/os/pcb.js"></script>
+   <script type="text/javascript" src="distrib/os/cpuScheduler.js"></script>
+   <script type="text/javascript" src="distrib/os/cpuDispatcher.js"></script>
 
    <!-- Other Routines -->
    <script type="text/javascript" src="distrib/utils.js"></script>
    <!-- Uncomment the line below to enable GLaDOS testing. -->
    <!-- <script type="text/javascript" src="http://alanclasses.github.io/TSOS/test/glados-ip3.js"></script> -->
-   
+
 </head>
 
 <body onload="onDocumentLoad()">
@@ -59,25 +61,25 @@
             <i class="fa-regular fa-play"></i>
          </button>
          <button
-                id = "btnHaltOS"
-                name="brnHaltOS"
-                class="btn btn-outline-warning"
-                disabled="disabled"
-                value="Halt"
-                tabindex="1"
-                onclick="TSOS.Control.hostBtnHaltOS_click(this);"
-                style="display: none;">
+                 id = "btnHaltOS"
+                 name="brnHaltOS"
+                 class="btn btn-outline-warning"
+                 disabled="disabled"
+                 value="Halt"
+                 tabindex="1"
+                 onclick="TSOS.Control.hostBtnHaltOS_click(this);"
+                 style="display: none;">
             <i class="fa-regular fa-pause"></i>
          </button>
 
          <button type="button"
-                id = "btnReset"
-                name="brnReset"
-                class="btn btn-outline-danger"
-                disabled="disabled"
-                value="Restart"
-                tabindex="2"
-                onclick="TSOS.Control.hostBtnReset_click(this);">
+                 id = "btnReset"
+                 name="brnReset"
+                 class="btn btn-outline-danger"
+                 disabled="disabled"
+                 value="Restart"
+                 tabindex="2"
+                 onclick="TSOS.Control.hostBtnReset_click(this);">
             <i class="fa-regular fa-rotate-right"></i>
          </button>
       </div>
@@ -185,7 +187,7 @@
                          rows="10"
                          cols="100"
                          class="bg-dark text-white"
-               ></textarea>
+               >A9 03 8D 41 00 A9 01 8D 40 00 AC 40 00 A2 01 FF EE 40 00 AE 40 00 EC 41 00 D0 EF A9 44 8D 42 00 A9 4F 8D 43 00 A9 4E 8D 44 00 A9 45 8D 45 00 A9 00 8D 46 00 A2 02 A0 42 FF 00</textarea>
             </label>
          </div>
          <div id="divLog">
