Can track turnarounbd and wait times now and added a few more shell commands like kill and ps

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
    <!-- Other Routines -->
    <script type="text/javascript" src="distrib/utils.js"></script>
    <!-- Uncomment the line below to enable GLaDOS testing. -->
-   <!-- <script type="text/javascript" src="http://alanclasses.github.io/TSOS/test/glados-ip3.js"></script> -->
+   <script type="text/javascript" src="http://alanclasses.github.io/TSOS/test/glados-ip3.js"></script>
 
 </head>
 
@@ -109,6 +109,8 @@
              readonly>
    </nav>
 
+   <br>
+
    <div>
       <div id="divConsole" style="margin:4px; width: 900px; height:650px; float:left;">
          <canvas id="display"
@@ -171,7 +173,8 @@
                   <th scope="col">X</th>
                   <th scope="col">Y</th>
                   <th scope="col">Z</th>
-                  <th scope=""col>Status</th>
+                  <th scope="col">Base</th>
+                  <th scope="col">Status</th>
                </tr>
                </thead>
                <tbody id="processViewBody">
@@ -185,9 +188,9 @@
                <textarea name="taProgramInput"
                          id  ="taProgramInput"
                          rows="10"
-                         cols="100"
+                         cols="140"
                          class="bg-dark text-white"
-               >A9 03 8D 41 00 A9 01 8D 40 00 AC 40 00 A2 01 FF EE 40 00 AE 40 00 EC 41 00 D0 EF A9 44 8D 42 00 A9 4F 8D 43 00 A9 4E 8D 44 00 A9 45 8D 45 00 A9 00 8D 46 00 A2 02 A0 42 FF 00</textarea>
+               >A9 00 8D 7B 00 A9 00 8D 7B 00 A9 00 8D 7C 00 A9 00 8D 7C 00 A9 01 8D 7A 00 A2 00 EC 7A 00 D0 39 A0 7D A2 02 FF AC 7B 00 A2 01 FF AD 7B 00 8D 7A 00 A9 01 6D 7A 00 8D 7B 00 A9 03 AE 7B 00 8D 7A 00 A9 00 EC 7A 00 D0 02 A9 01 8D 7A 00 A2 01 EC 7A 00 D0 05 A9 01 8D 7C 00 A9 00 AE 7C 00 8D 7A 00 A9 00 EC 7A 00 D0 02 A9 01 8D 7A 00 A2 00 EC 7A 00 D0 AC A0 7F A2 02 FF 00 00 00 00 61 00 61 64 6F 6E 65 00</textarea>
             </label>
          </div>
          <div id="divLog">
@@ -197,7 +200,7 @@
                <textarea name="taHostLog"
                          id  ="taHostLog"
                          rows="10"
-                         cols="100"
+                         cols="140"
                          class="bg-dark text-white"
                          readonly
                ></textarea>
