It works it all works now I'm wheezing crying and snobbing and cackling, Id like to thank my parents my friend and my family for sticking with me throiugh this and of course my favorite and best professor in the world prof algozzzine for being supportive throughout and giving me the strength and courage to finsih this i can die peacefully now

--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
                   <th scope="col">Z</th>
                   <th scope="col">Base</th>
                   <th scope="col">Status</th>
+                  <th scope="col">Location</th>
                </tr>
                </thead>
                <tbody id="processViewBody">
