--- a/index.html
+++ b/index.html
@@ -50,58 +50,60 @@
 
 <div id="divMain" style="width:100%;">
 
-   <nav class="navbar navbar-dark bg-dark">
-      <div class="btn-group">
-         <button class="btn btn-outline-success"
-                 id="btnStartOS"
-                 name="brnStartOS"
-                 value="Start"
-                 tabindex="0"
-                 onclick="TSOS.Control.hostBtnStartOS_click(this);"
-         >
-            <i class="fa-regular fa-play"></i>
-         </button>
-         <button
-                 id = "btnHaltOS"
-                 name="brnHaltOS"
-                 class="btn btn-outline-warning"
-                 disabled="disabled"
-                 value="Halt"
-                 tabindex="1"
-                 onclick="TSOS.Control.hostBtnHaltOS_click(this);"
-                 style="display: none;">
-            <i class="fa-regular fa-pause"></i>
-         </button>
+   <nav class="navbar navbar-dark bg-dark" style="display: flex; justify-content: space-between;">
+      <div>
+         <div class="btn-group">
+            <button class="btn btn-outline-success"
+                    id="btnStartOS"
+                    name="brnStartOS"
+                    value="Start"
+                    tabindex="0"
+                    onclick="TSOS.Control.hostBtnStartOS_click(this);"
+            >
+               <i class="fa-regular fa-play"></i>
+            </button>
+            <button
+                    id = "btnHaltOS"
+                    name="brnHaltOS"
+                    class="btn btn-outline-warning"
+                    disabled="disabled"
+                    value="Halt"
+                    tabindex="1"
+                    onclick="TSOS.Control.hostBtnHaltOS_click(this);"
+                    style="display: none;">
+               <i class="fa-regular fa-pause"></i>
+            </button>
 
-         <button type="button"
-                 id = "btnReset"
-                 name="brnReset"
-                 class="btn btn-outline-danger"
-                 disabled="disabled"
-                 value="Restart"
-                 tabindex="2"
-                 onclick="TSOS.Control.hostBtnReset_click(this);">
-            <i class="fa-regular fa-rotate-right"></i>
-         </button>
-      </div>
-      <div class="btn-group">
-         <button type = "button"
-                 class ="btn btn-success"
-                 id = "btnSingleStep"
-                 value = "Start"
-                 disabled = "disabled"
-                 onclick = "TSOS.Control.hostSingleStep(this);"
-         >
-            Start Single Step
-         </button>
-         <button type = "button"
-                 class = "btn btn-light"
-                 id = "btnNextStep"
-                 value = "Next"
-                 disabled = "disabled"
-                 onclick = "TSOS.Control.hostNextStep();">
-            <i class="fa-solid fa-angle-right"></i>
-         </button>
+            <button type="button"
+                    id = "btnReset"
+                    name="brnReset"
+                    class="btn btn-outline-danger"
+                    disabled="disabled"
+                    value="Restart"
+                    tabindex="2"
+                    onclick="TSOS.Control.hostBtnReset_click(this);">
+               <i class="fa-regular fa-rotate-right"></i>
+            </button>
+         </div>
+         <div class="btn-group">
+            <button type = "button"
+                    class ="btn btn-success"
+                    id = "btnSingleStep"
+                    value = "Start"
+                    disabled = "disabled"
+                    onclick = "TSOS.Control.hostSingleStep(this);"
+            >
+               Start Single Step
+            </button>
+            <button type = "button"
+                    class = "btn btn-light"
+                    id = "btnNextStep"
+                    value = "Next"
+                    disabled = "disabled"
+                    onclick = "TSOS.Control.hostNextStep();">
+               <i class="fa-solid fa-angle-right"></i>
+            </button>
+         </div>
       </div>
       <h1>zerOS</h1>
       <input type="text"
@@ -113,9 +115,9 @@
    <br>
 
    <div>
-      <div id="divConsole" style="margin:4px; width: 900px; height:650px; float:left;">
+      <div id="divConsole" style="margin:4px; width: 800px; height:650px; float:left;">
          <canvas id="display"
-                 width="900px"
+                 width="800px"
                  height="650px"
                  tabindex="3"
                  style="border-radius: 15px;">
@@ -190,7 +192,7 @@
                <textarea name="taProgramInput"
                          id  ="taProgramInput"
                          rows="10"
-                         cols="140"
+                         cols="118"
                          class="bg-dark text-white"
                >A9 00 8D 7B 00 A9 00 8D 7B 00 A9 00 8D 7C 00 A9 00 8D 7C 00 A9 01 8D 7A 00 A2 00 EC 7A 00 D0 39 A0 7D A2 02 FF AC 7B 00 A2 01 FF AD 7B 00 8D 7A 00 A9 01 6D 7A 00 8D 7B 00 A9 03 AE 7B 00 8D 7A 00 A9 00 EC 7A 00 D0 02 A9 01 8D 7A 00 A2 01 EC 7A 00 D0 05 A9 01 8D 7C 00 A9 00 AE 7C 00 8D 7A 00 A9 00 EC 7A 00 D0 02 A9 01 8D 7A 00 A2 00 EC 7A 00 D0 AC A0 7F A2 02 FF 00 00 00 00 61 00 61 64 6F 6E 65 00</textarea>
             </label>
@@ -202,7 +204,7 @@
                <textarea name="taHostLog"
                          id  ="taHostLog"
                          rows="10"
-                         cols="140"
+                         cols="118"
                          class="bg-dark text-white"
                          readonly
                ></textarea>
