Changed May-Whool to May-Hool

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 <br>
 <p class="footerText" style="clear:both; color: white; font-family: 'Comic Sans MS'">
    <br>
-   Copyright &copy; 2022 - 2022 All Rights Reserved. This is the intellectual property of May-Whool.
+   Copyright &copy; 2022 - 2022 All Rights Reserved. This is the intellectual property of May-Hool.
    <br>
    Reproduction is inhibited without the express written consent of Our Lord and Savior Tim Cook.
 </p>
